tree-sitter-usfm3/test/corpus/test11_namespace_esb.txt
================================================================================
znamespace
================================================================================
\id GEN
\customPara_zhead some text
\zhead some text
\c 1
\customPara_z-empty
\z-empty
\p
\customMS_z-extra Some text content which is not scripture \*
\v 1 text \customChar_zinline inner text \customChar_zinline*
\zinline inner text \zinline*
\v 2 text
\v 3 text \customChar_zattrib inner text |x-key="val" \customChar_zattrib*
\v 4 text \zattrib inner text |x-key="val" \zattrib*
\rem test comment to chekc if para flow breaks
\v 5 mote text
\customPara_z-para check inner para
\v 6 text
\c 2
\customMS_z-extra Some text content which is not scripture \*
\z-milestone |x-attrib="value"\*
\p scripture continues
--------------------------------------------------------------------------------

(File
  (book
    (id
      (bookcode)
      (description)))
  (zNameSpacePara
    (zSpaceTagPara)
    (text))
  (zNameSpaceUndefined
    (zNameSpaceRegular
      (zSpaceTagGeneric)
      (text)))
  (chapter
    (c
      (chapterNumber))
    (zNameSpacePara
      (zSpaceTagPara)
      (text))
    (zNameSpaceUndefined
      (zNameSpaceRegular
        (zSpaceTagGeneric)
        (text)))
    (paragraph
      (p
        (zNameSpaceMS
          (zSpaceTagMilestone)
          (text))
        (verseText
          (text))
        (v
          (verseNumber))
        (verseText
          (text))
        (zNameSpaceChar
          (zSpaceTagChar)
          (text)
          (zSpaceCloseChar))
        (verseText
          (text))
        (zNameSpaceUndefined
          (zNameSpaceClosed
            (zSpaceTagGeneric)
            (text)
            (zSpaceCloseGeneric)))
        (verseText
          (text))
        (v
          (verseNumber))
        (verseText
          (text))
        (v
          (verseNumber))
        (verseText
          (text))
        (zNameSpaceChar
          (zSpaceTagChar)
          (text)
          (customAttribute
            (customAttributeName)
            (attributeValue))
          (zSpaceCloseChar))
        (verseText
          (text))
        (v
          (verseNumber))
        (verseText
          (text))
        (zNameSpaceUndefined
          (zNameSpaceClosed
            (zSpaceTagGeneric)
            (text)
            (customAttribute
              (customAttributeName)
              (attributeValue))
            (zSpaceCloseGeneric)))
        (verseText
          (text))
        (rem
          (text))
        (v
          (verseNumber))
        (verseText
          (text))
        (zNameSpacePara
          (zSpaceTagPara)
          (text))
        (v
          (verseNumber))
        (verseText
          (text)))))
  (chapter
    (c
      (chapterNumber))
    (zNameSpaceMS
      (zSpaceTagMilestone)
      (text))
    (zNameSpaceUndefined
      (zNameSpaceClosed
        (zSpaceTagGeneric)
        (text)
        (customAttribute
          (customAttributeName)
          (attributeValue))))
    (paragraph
      (p
        (verseText
          (text))))))

================================================================================
esb..esbe
================================================================================
\id GEN
\c 1
\p
\v 18 At once they left their nets and went with him.
\esb
\ms Fish and Fishing
\p In Jesus' time, fishing took place mostly on lake Galilee, because Jewish people
could not use many of the harbors along the coast of the Mediterranean Sea, since these
harbors were often controlled by unfriendly neighbors. The most common fish in the Lake
of Galilee were carp and catfish. The Law of Moses allowed people to eat any fish with
fins and scales, but since catfish lack scales (as do eels and sharks) they were not to
be eaten (\xt Lev 11.9-12\xt*). Fish were also probably brought from Tyre and Sidon,
where they were dried and salted.
\p Among early Christians, the fish was a favorite image for Jesus, because the Greek
word for fish (\tl ichthus\tl*) consists of the first letters of the Greek words that
tell who Jesus is: \fig Ihsous Christos Theou Uios Swthr|alt="Christian Fish Image"
src="christfish.jpg" size="col" ref="1.18"\fig*
\esbe
\p
\v 19 He went a little farther on and saw two other brothers, James and John,
the sons of Zebedee.
--------------------------------------------------------------------------------

(File
  (book
    (id
      (bookcode)
      (description)))
  (chapter
    (c
      (chapterNumber))
    (paragraph
      (p
        (v
          (verseNumber))
        (verseText
          (text))))
    (esb
      (title
        (msBlock
          (ms
            (msTag)
            (text))))
      (paragraph
        (p
          (verseText
            (text))
          (crossref
            (xt_standalone
              (crossrefText
                (text))))
          (verseText
            (text))))
      (paragraph
        (p
          (verseText
            (text)
            (tl
              (text))
            (text)
            (fig
              (text)
              (altAttribute
                (attributeValue))
              (srcAttribute
                (attributeValue))
              (sizeAttribute
                (attributeValue))
              (refAttribute
                (attributeValue)))
            (text)))))
    (paragraph
      (p
        (v
          (verseNumber))
        (verseText
          (text))))))

================================================================================
cat
================================================================================
\id GEN
\c 1
\p
\v 18 At once they left their nets and went with him.
\esb \cat History\cat*
\ms Fish and Fishing
\p In Jesus' time, fishing took place mostly on lake Galilee, because Jewish people
could not use many of the harbors along the coast of the Mediterranean Sea, since these
harbors were often controlled by unfriendly neighbors. The most common fish in the Lake
of Galilee were carp and catfish. The Law of Moses allowed people to eat any fish with
fins and scales, but since catfish lack scales (as do eels and sharks) they were not to
be eaten (\xt Lev 11.9-12\xt*). Fish were also probably brought from Tyre and Sidon,
where they were dried and salted.
\p Among early Christians, the fish was a favorite image for Jesus, because the Greek
word for fish (\tl ichthus\tl*) consists of the first letters of the Greek words that
tell who Jesus is: \fig Ihsous Christos Theou Uios Swthr|alt="Christian Fish Image"
src="christfish.jpg" size="col" ref="1.18"\fig*
\esbe
\p
\v 19 He went a little farther on and saw two other brothers, James and John,
the sons of Zebedee.
--------------------------------------------------------------------------------

(File
  (book
    (id
      (bookcode)
      (description)))
  (chapter
    (c
      (chapterNumber))
    (paragraph
      (p
        (v
          (verseNumber))
        (verseText
          (text))))
    (esb
      (cat
        (category))
      (title
        (msBlock
          (ms
            (msTag)
            (text))))
      (paragraph
        (p
          (verseText
            (text))
          (crossref
            (xt_standalone
              (crossrefText
                (text))))
          (verseText
            (text))))
      (paragraph
        (p
          (verseText
            (text)
            (tl
              (text))
            (text)
            (fig
              (text)
              (altAttribute
                (attributeValue))
              (srcAttribute
                (attributeValue))
              (sizeAttribute
                (attributeValue))
              (refAttribute
                (attributeValue)))
            (text)))))
    (paragraph
      (p
        (v
          (verseNumber))
        (verseText
          (text))))))
